--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -6,6 +6,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "pbeheytS" do |control|
     control.vm.hostname = "pbeheytS"
     control.vm.network "private_network", ip: "192.168.56.110"
+    control.vm.synced_folder "./confs", "/vagrant", type:"virtualbox"
+    control.vm.provision "shell", path: "scripts/k3s.sh"
     control.vm.provider "virtualbox" do |v|
       v.memory = "1024"
       v.cpus = 1
@@ -15,6 +17,8 @@ Vagrant.configure("2") do |config|
   config.vm.define "pbeheytSW" do |control|
     control.vm.hostname = "pbeheytSW"
     control.vm.network "private_network", ip: "192.168.56.111"
+    control.vm.synced_folder "./confs/", "/vagrant", type:"virtualbox"
+    control.vm.provision "shell", path: "scripts/k3s.sh"
     control.vm.provider "virtualbox" do |v|
       v.memory = "1024"
       v.cpus = 1
