--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -6,7 +6,10 @@ Vagrant.configure("2") do |config|
     config.vm.define "pbeheytS" do |control|
       control.vm.hostname = "pbeheytS"
       control.vm.network "private_network", ip: "192.168.56.110"
-      control.vm.synced_folder "./confs", "/vagrant", type:"virtualbox"
+      control.vm.synced_folder ".", "/vagrant", disabled: true
+      control.vm.synced_folder "./confs/irc", "/irc", type:"virtualbox"
+      control.vm.synced_folder "./confs/k3s", "/k3s", type:"virtualbox"
+      control.vm.synced_folder "./scripts", "/scripts", type:"virtualbox"
       control.vm.provision "shell", path: "scripts/k3s.sh"
       control.vm.provider "virtualbox" do |v|
         v.memory = "1024"
