--- a/p2/confs/k3s/game-2048-service.yaml
+++ b/p2/confs/k3s/game-2048-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: irc-chat-service
+  name: game-2048-service
 spec:
   type: ClusterIP
   selector:
-    app: irc-chat
+    app: game-2048
   ports:
   - protocol: TCP
-    port: 9000
-    targetPort: 9000
+    port: 80
+    targetPort: 80
