--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,25 +1,25 @@
 Vagrant.configure("2") do |config|
-  
+
   config.vm.box = "debian/bookworm64"
   config.vm.box_version = "12.20240814.1"
 
-  config.vm.define "pbeheytS" do |control|
-    control.vm.hostname = "pbeheytS"
-    control.vm.network "private_network", ip: "192.168.56.110"
-    control.vm.synced_folder "./confs", "/vagrant", type:"virtualbox"
-    control.vm.provision "shell", path: "scripts/k3s.sh"
-    control.vm.provider "virtualbox" do |v|
+  config.vm.define "pbeheytS" do |server|
+    server.vm.hostname = "pbeheytS"
+    server.vm.network "private_network", ip: "192.168.56.110"
+    server.vm.synced_folder "./confs", "/vagrant", type: "virtualbox"
+    server.vm.provision "shell", path: "scripts/k3s.sh"
+    server.vm.provider "virtualbox" do |v|
       v.memory = "1024"
       v.cpus = 1
     end
   end
 
-  config.vm.define "pbeheytSW" do |control|
-    control.vm.hostname = "pbeheytSW"
-    control.vm.network "private_network", ip: "192.168.56.111"
-    control.vm.synced_folder "./confs/", "/vagrant", type:"virtualbox"
-    control.vm.provision "shell", path: "scripts/k3s.sh"
-    control.vm.provider "virtualbox" do |v|
+  config.vm.define "pbeheytSW" do |worker|
+    worker.vm.hostname = "pbeheytSW"
+    worker.vm.network "private_network", ip: "192.168.56.111"
+    worker.vm.synced_folder "./confs/", "/vagrant", type: "virtualbox"
+    worker.vm.provision "shell", path: "scripts/k3s.sh"
+    worker.vm.provider "virtualbox" do |v|
       v.memory = "1024"
       v.cpus = 1
     end
