--- a/p2/confs/k3s/iot-local-ingress.yaml
+++ b/p2/confs/k3s/iot-local-ingress.yaml
@@ -28,3 +28,13 @@ spec:
             name: irc-chat-service
             port:
               number: 9000
+  - host: tetris.iot.local
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: game-tetris-service
+            port:
+              number: 80
