--- a/bonus/confs/playground-service.yaml
+++ b/bonus/confs/playground-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: playground-service
+  name: playground-gitlab-service
   namespace: dev
 spec:
   type: LoadBalancer
   selector:
-    app: playground
+    app: playground-gitlab
   ports:
   - protocol: TCP
     port: 8889
