--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,12 +1,12 @@
 Vagrant.configure("2") do |config|
 
   config.vm.box = "debian/bookworm64"
-  config.vm.box_version = "12.20240814.1"
+  config.vm.box_version = "12.20240905.1"
 
   config.vm.define "pbeheytS" do |server|
     server.vm.hostname = "pbeheytS"
     server.vm.network "private_network", ip: "192.168.56.110"
-    server.vm.synced_folder "./confs", "/vagrant", type: "virtualbox"
+    server.vm.synced_folder "./confs", "/vagrant", type: "virtualbox", create: "true"
     server.vm.provision "shell", path: "scripts/k3s.sh"
     server.vm.provider "virtualbox" do |v|
       v.memory = "1024"
@@ -17,7 +17,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "pbeheytSW" do |worker|
     worker.vm.hostname = "pbeheytSW"
     worker.vm.network "private_network", ip: "192.168.56.111"
-    worker.vm.synced_folder "./confs/", "/vagrant", type: "virtualbox"
+    worker.vm.synced_folder "./confs/", "/vagrant", type: "virtualbox", create: "true"
     worker.vm.provision "shell", path: "scripts/k3s.sh"
     worker.vm.provider "virtualbox" do |v|
       v.memory = "1024"
